# fullstack-gpt

./: notebook.ipynb  pyproject.toml
