[project]
name = "fullstack-gpt"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.115.8",
    "ipykernel<7.0.0,>=6.29.5",
    "langchain-openai<1.0.0,>=0.3.3",
    "langchain<1.0.0,>=0.3.17",
    "tiktoken<1.0.0,>=0.8.0",
]

[tool.uv]
dev-dependencies = [
    "mypy<2.0.0,>=1.15.0",
    "ruff<1.0.0,>=0.9.4",
    "types-passlib<2.0.0.0,>=1.7.7.20241221",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
